# kinetics-petsc-demo

./: CMakeLists.txt  Makefile  README.md  configure  constant_data.hh  data.hh  functions.cc  functions.hh  main.cc
